<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="google_maps_key">AIzaSyDEedsYQzLtHaCgBekXbp2RkxO3_J9KITg</string>
    <string name="app_name">Trakr</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="fragment_login_email_text">email</string>
    <string name="fragment_login_password_text">password</string>
    <string name="fragment_login_signin">sign in</string>
    <string name="action_register">create account</string>
    <string name="action_create">create &amp; login</string>
    <string name="action_cancel">cancel</string>
    <string name="text_register_heading">CREATE A NEW TRAKR ACCOUNT TODAY!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_password_required">Password is required</string>
    <string name="register_error_email">Email already exists</string>
    <string name="register_error_username">Username already exists</string>
    <string name="logo_description">trakR</string>
    <string name="error_username_required">Username is required</string>
    <string name="error_username_invalid">Username need to be longer than 4 characters</string>
    <string name="register_username_hint">username</string>
    <string name="logo_letters_description"></string>
    <string name="action_logout">Logout</string>
    <string name="action_profile">Profile</string>
    <string name="card_account_extra_icon_description">Credit card type icon</string>
    <string name="card_expand_recent_transactions_text">Last three check in\'s…</string>
    <string name="expand_list_grand_total_text">All time total</string>
    <string name="add_account_hint_account_number">Account Number</string>
    <string name="add_account_hint_expires">Expires</string>
    <string name="add_account_hint_descriptive">Descriptive Name</string>
    <string name="add_account_nfc_button_description">Read an EMV card</string>
    <string name="add_account_action_cancel">Cancel</string>
    <string name="add_account_action_confirm">Add</string>
    <string name="credit_type_visa">VISA</string>
    <string name="credit_type_mastercard">Master Card</string>
    <string name="credit_type_amex">Amex</string>
    <string name="credit_type_other">Other</string>
    <string name="add_account_button_delete_description">Delete account button</string>
    <string name="title_activity_check_in">Check In</string>
    <string name="action_search">Search</string>
    <string name="check_in_save_image_description">Save transaction</string>
    <string name="check_in_cancel_image_description">Cancel transaction</string>
    <string name="check_in_merchant_website_default">no website found</string>
    <string name="check_in_amount_hint">Amount spent</string>
    <string name="check_in_account_description">Bank account</string>
    <string name="check_in_date_hint">Choose date</string>
    <string name="expand_list_total_transactions_desc">Total check in\'s</string>
    <string name="menu_check_in_filter">Filter</string>
    <string name="title_activity_card_reader">Read Card</string>
    <string name="menu_card_reader_help">Help</string>
    <string name="activity_card_reader_help_message">Place your credit card against the back of your device.  Once you find the NFC \'sweet spot\', the card will be read. Try not to move the card while reading, or else it might fail.  Note this program only grabs the Card number and Expiry date, no other information is gathered or stored.</string>
    <string name="fragment_check_in_empty_desc">Check In now!</string>
    <string name="fragments_account_empty_list_desc">Add an account!</string>
    <string name="title_activity_import">ImportActivity</string>

</resources>
