<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="35dp"
        android:paddingRight="35dp"
        android:paddingTop="50dp"
        android:gravity="center_horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginBottom="20dp">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/logo_letters_solid_white"
                    android:contentDescription="@string/logo_letters_description" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_register_heading"
                    android:paddingTop="20dp"
                    android:textColor="#ffffffff"
                    android:textSize="18sp"
                    android:singleLine="false"
                    style="?android:textAppearanceSmall"
                    android:textStyle="bold|italic" />

                </LinearLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/register_username"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:hint="@string/register_username_hint"
                android:inputType="textNoSuggestions"
                android:textColor="#FFF"
                android:textColorHint="#A9E2AC"
                android:textCursorDrawable="@null"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/login_email"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:hint="@string/fragment_login_email_text"
                android:inputType="textNoSuggestions|textEmailAddress"
                android:textColor="#FFF"
                android:textColorHint="#A9E2AC"
                android:textCursorDrawable="@null"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:id="@+id/login_password"
                android:hint="@string/fragment_login_password_text"
                android:inputType="textPassword"
                android:textColor="#FFF"
                android:textColorHint="#A9E2AC"
                android:textCursorDrawable="@null"
                android:maxLines="1"
                android:singleLine="true"
                android:layout_marginBottom="16dp"/>

        <com.balysv.materialripple.MaterialRippleLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:rippleOverlay="true"
            app:rippleDuration="800" >

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="?android:textAppearanceSmall"
                android:text="@string/action_create"
                android:textColor="#FFF"
                android:textStyle="bold"
                android:background="@drawable/button_confirm"
                android:id="@+id/action_create_account"/>

        </com.balysv.materialripple.MaterialRippleLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="bottom"
        android:paddingLeft="35dp"
        android:paddingRight="35dp"
        android:paddingBottom="40dp"
        android:layout_marginBottom="16dp">

        <com.balysv.materialripple.MaterialRippleLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:rippleOverlay="true"
            app:rippleDuration="600" >

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:textAppearanceSmall"
            android:text="@string/action_cancel"
            android:textColor="#FFF"
            android:background="@drawable/button_cancel"
            android:id="@+id/action_cancel"/>

        </com.balysv.materialripple.MaterialRippleLayout>

    </LinearLayout>

</RelativeLayout>

