<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="80dp"
        android:paddingLeft="35dp"
        android:paddingRight="35dp"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="170dp"
            android:layout_height="70dp"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="40dp"
            android:id="@+id/login_logo"
            android:src="@drawable/login_logo_stroke_white"
            android:contentDescription="@string/logo_description" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:id="@+id/ui_container">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/login_email"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:hint="@string/fragment_login_email_text"
                android:inputType="textNoSuggestions|textEmailAddress"
                android:textColor="#FFF"
                android:textColorHint="#A9E2AC"
                android:textCursorDrawable="@null"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:id="@+id/login_password"
                android:hint="@string/fragment_login_password_text"
                android:inputType="textPassword"
                android:textColorHint="#A9E2AC"
                android:textColor="#FFF"
                android:textCursorDrawable="@null"
                android:maxLines="1"
                android:singleLine="true"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                style="?android:textAppearanceSmall"
                android:text="@string/fragment_login_signin"
                android:textColor="#fff"
                android:textStyle="bold"
                android:hint="@string/fragment_login_signin"
                android:id="@+id/action_login"
                android:background="@drawable/button_confirm" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="bottom"
        android:paddingLeft="35dp"
        android:paddingRight="35dp"
        android:paddingBottom="40dp">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            style="?android:textAppearanceSmall"
            android:text="@string/action_register"
            android:textColor="#fff"
            android:textStyle="bold"
            android:background="@drawable/button_cancel"
            android:id="@+id/action_register"/>
    </LinearLayout>

</RelativeLayout>

